<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BagelPlay</string>
    <string name="info1"><b>BagelPlay v1.0.125\n (Release Date: 4-20-2016)</b></string>
    <string name="info2"><b>         Version: 1.0.125\n
									Date: Apr. 20, 2016\n
								Email: info@biggifi.com\n
								Copyright ⊙2015 BagelPlay Mobile, Inc.\n
								           All rights Reserved. </b></string>
    <string name="search_vma">Searching for BagelPlay Address</string>
    <string name="search_vma_description">Scanning, please wait...</string>
    <string name="no_vma">BagelPlay did not find a BagelPlay device in your network, please try again</string>
    <string name="ok">OK</string>
    <string name="disconnect">Disconnect</string>
    <string name="cancel">Cancel</string>
    <string name="insert_ip">Insert BagelPlay IP</string>
    <string name="invalid_ip">Invalid IP</string>
    <string name="enter_ip">Enter IP Address</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_ip">Delete IP</string>
    <string name="delete_ask">Are you sure to delete it</string>
    <string name="rescan">Rescan</string>
    <string name="insert">Insert</string>
    <string name="active_vma">Active BagelPlay Devices</string>
    <string name="length_error">Maximum length of Nickname and BagelPlay code is 15 </string>
    <string name="null_error">Nickname and BagelPlay code can not be null</string>
    <string name="network_error">No router to host, check network status!</string>
    <string name="ip_error">Timeout or This ip doesn\'t exist，please try again!</string>
    <string name="ip_error_timeout">Timeout,please try again!</string>
	<string name="ip_error_wrong">This ip doesn\'t exist，please try again!</string>
    <string name="account_existed_error">Account existed, chose other name.</string>
    <string name="code_error">Code error!</string>
    <string name="code_set_error">Code not set!</string>
    <string name="account_logged_error">User has logged, select other name!</string>
    <string name="max_user_error">Maximum users, refused connection!</string>
    <string name="disconnect_error">Has disconnected with VMA!</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="delete_username">Delete user name</string>
    <string name="nick_name">Nickname:</string>
    <string name="vma_code">Code:</string>
    <string name="cha_limited">Max bytes 15</string>
    <string name="login_btn">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="screenshot_time_error">10 times limited, please buy full version to unlock it.</string>
    <string name="value">value x </string>
    <string name="setting_mouse">Mouse Setting</string>
    <string name="setting_mouse_speed">Set Motion Speed</string>
    <string name="setting_sensor">Sensor Setting</string>
    <string name="setting_sensor_sensitivity">Sensitivity</string>
    <string name="setting_sensor_direction">Reverse Directions</string>
    <string name="setting_sensor_direction_description">Reverse horizontal and vertical directions</string>
    <string name="setting_advance">Advanced Mode</string>
    <string name="setting_advance_screenshot">Screenshot Mode</string>
    <string name="setting_advance_screenshot_sensor">Sensor</string>
    <string name="setting_advance_screenshot_touch">Touch</string>
    <string name="setting_advance_switch">Switch Mode</string>
    <string name="setting_advance_switch_slipbar">Slip Bar</string>
    <string name="setting_advance_switch_sensor">Sensor</string>
    <string name="setting_help">Help</string>
    <string name="setting_about">About</string>
    <string name="wifi_error">Wi-Fi Network Error</string>
    <string name="wifi_error_msg">Cannot connect to the network. Select Configure Wi-Fi or Exit.</string>
    <string name="wifi_error_configure">Configure Wi-Fi</string>
    <string name="wifi_error_exit">Exit</string>
    <string name="wifi_error_weak">Network signal is very weak!</string>
    <string name="no_response">No Response from BagelPlay</string>
    <string name="need_rescan">Cannot connect to the VMA. \nSelect Rescan or Exit.</string>
    <string name="reconnect">No Response from BagelPlay. \nReconnect BagelPlay.</string>
    <string name="reconnect_success">Connected to BagelPlay！</string>
    <string name="help_info">Do you want to see the help information?</string>
    <string name="keypad">Virtual RC</string>
    <string name="sensor">Sensor</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="quit">Are you sure to exit?</string>
    <string name="update">Update</string>
    <string name="new_version">New Version: </string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_retry">Retry</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_update">Update</string>
    <string name="download_update_apk_failure">Download failure, No sdcard.</string>
    <string name="wait_dialog_title">Waiting</string>
    <string name="wait_dialog_findToVMA">Searching BagelPlay to configure</string>
    <string name="wait_dialog_connectToVMA">Connecting to BagelPlay</string>
    <string name="inform">Inform</string>
    <string name="outOfTime">Timeout, please try again</string>
    <string name="config_hot_title">Hotspot configuration</string>
    <string name="config_hot_message"></string>
    <string name="config_hot_btn_ok">set</string>
    <string name="config_hot_btn_cancel">cancel</string>
    <string name="config_hot_dialog_makesureCancel">Do you want to connect to internet?</string>
    <string name="wait_dialog_findHots">Searching all hotspots</string>
    <string name="wait_dialog_configIPForVMA">Configuring Wi-Fi for your BagelPlay</string>
    <string name="configIPForVMA_fail_passwordWrong">Connection failed, password error</string>
    <string name="configIPForVMA_fail_timeout">Connection failed, timeout</string>
    <string name="wifi_input_password">password</string>
    <string name="wifi_input_connect">connect</string>
    <string name="wifi_input_showPassword">show password</string>
    <string name="wifi_list_title">Wi-Fi list</string>
    <string name="hot_list_title">Hotspot list</string>
    <string name="wifi_reconnct">BagelPlay is reconnecting.</string>
    <string name="wifi_reconnct_timeout">Reconnect failed, please exit to re-open.</string>
    <string name="wifi_disconnect">Wi-Fi disconnected, please exit to re-open.</string>
    <string name="wifi_dangle_disconnect">No Response from BagelPlay.</string>
    <string name="wifi_dangle_disconnect_reconnect">reconnect</string>
    <string name="keyboard">keyboard</string>
    <string name="send">Send</string>
    <string name="close">close</string>
    <string name="wifi_set_passwordAtLeast">Password need 8 charactor at least</string>
	<string name="wifi_set_setup">Set up</string>
	<string name="wifi_set_nosetup">No</string>
	<string name="wifi_set_offline">If choose no,you will be at the offline mode, and could not access in internet!</string>
	<string name="wifi_set_connect">Connect</string>
	<string name="wifi_set_inputwifi">Please choose Wi-Fi</string>
	<string name="wifi_set_inputpassword">Please enter password</string>
    <string name="wifi_set_findingstick">Finding BagelPlay on <xliff:g id="node1">%1$s</xliff:g>...</string>
    <string name="wifi_set_stickonwifi"><xliff:g id="node1">%1$s</xliff:g> BagelPlay on: <xliff:g id="node2">%2$s</xliff:g></string>
    <string name="wifi_set_sticksetup">Now let\'s connect <xliff:g id="node1">%1$s</xliff:g> to your wireless network.</string>
    <string name="wifi_set_sticksetuping">Connecting to [<xliff:g id="node1">%1$s</xliff:g>]...</string>
    <string name="wifi_set_choosewifi">Choose a Wi-Fi network</string>
    <string name="wifi_set_findingwifi">Finding wifi...</string>
    <string name="wifi_set_connectingwifi">Connecting your BagelPlay to [<xliff:g id="node1">%1$s</xliff:g>]...</string>
    <string name="wifi_set_wifinetwork">Wi-Fi</string>
    <string name="wifi_set_wifipassword">Password</string>
    <string name="wifi_set_showpassword">Show password</string>
    <string name="wifi_set_foundwifi">Setup [<xliff:g id="node1">%1$s</xliff:g>]</string>
    <string name="wifi_set_setupwifi">Setup [<xliff:g id="node1">%1$s</xliff:g>]</string>
    <string name="wifi_set_error_cantconnectstick">Could not connect to your BagelPlay. Make sure your BagelPlay is nearby.</string>
    <string name="wifi_set_error_passworderrormessagetitle">Connection failed</string>
    <string name="wifi_set_error_passworderrormessage">Incorrect password! Please check your entry and </string>
    <string name="wifi_set_toast_wifiopening">Wi-Fi is opening...</string>
    <string name="wifi_set_refresh">refresh</string>
    <string name="wifi_set_retry">Try again</string>
    <string name="wifi_set_successtitle"><xliff:g id="node1">%1$s</xliff:g> is successfully set up!</string>
    <string name="wifi_set_successmessage">You can now enjoy millions of Android apps on the big screen!</string>
    <string name="wifi_set_checkstickset">Check these connections: \r\n1. BagelPlay to HDMI port.\r\n2. USB power to TV or adaper.\r\n3. Change input to the BagelPlay\'s HDMI.\r\n4. Your Wi-Fi network.</string>
    <string name="wifi_set_sticisetmessage">If select No, you will enter offline mode. In offline mode, can\'t access the internet</string>
    <string name="wifi_set_nosticks2">No BagelPlay found</string>
    <string name="wifi_set_error_canntfindwifititle">Connection problem during setup</string>
    <string name="wifi_set_error_canntfindwifi">[<xliff:g id="node1">%1$s</xliff:g>] could not connect to [<xliff:g id="node2">%2$s</xliff:g>] - please check your Wi-Fi network name.</string>
	<string name="wifi_set_finishsetup">Finish Setup</string>
	<string name="wifi_set_error_huilianerrortitle">BagelPlay device connection timeout</string>
     <string name="wifi_set_error_huilianerrormessage">Please check your Wi-Fi network.</string>
     <string name="wifi_set_stickresettitle">Please wait</string>
     <string name="wifi_set_stickreset">Please continue to set up your BagelPlay.</string>
     <string name="numbertitle1">1.</string>
     <string name="numbertitle2">2.</string>
     <string name="numbertitle3">3.</string>
     <string name="wifi_set_nobiggififound_tip_1">This app requires a BagelPlay device to be powered on and connected to a TV. More info at: BagelPlay.com.</string>
     <string name="wifi_set_nobiggififound_tip_2">If BagelPlay device has not been connected to a Wi-Fi network, please follow the Wi-Fi setup instructions on the BagelPlay display screen.</string>
     <string name="wifi_set_nobiggififound_tip_3">Make sure BagelPlay device and your smartphone/tablet are connected to the same Wi-Fi network.</string>
     <string name="wifi_set_nobiggififound_btn_howtoconnectbiggifi">How to connect BagelPlay</string>
     <string name="wifi_set_nobiggififound_btn_exitandtryagain">Exit and Try Again</string>
     <string name="wifi_set_howtoconnectbiggifi">How to connect BagelPlay</string>
     <string name="wifi_set_gotit">Got it</string>
     <string name="wifi_set_btn_wifi">Wi-Fi</string>
     <string name="wifi_set_btn_offline">Offline</string>
     <string name="wifi_set_wifimode">Connect the BagelPlay device to your wireless network.</string>
     <string name="wifi_set_offlinemode">Your mobile is only connected to the BagelPlay device on its hotspot. You will not have internet access.</string>
	<string name="weimile">BagelPlay</string>
	<string name="wifi_set_choosestickfromlist">Choose from the list or tap the top-right refresh button for more search</string>
</resources>