<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:key="screen_list"
	 android:title="@string/setting_mouse"
	 android:summary="param setting"
	 android:background="@drawable/bg02">
	<com.bagelplay.controller.BiggiFiSeekBarPreference 
		android:key="mouse_data"
		android:title="@string/setting_mouse"
		android:summary="@string/setting_mouse_speed"
		android:dialogTitle="@string/setting"
		android:persistent="true"/>

 	<!-- <PreferenceCategory  android:key="@+id/ViewByMode"
         android:title="sensor">
		<com.bagelplay.controller.BiggiFiSeekBarPreference 
		 android:key="sensor_data"
		 android:title="Sensor Setting"
		 android:summary="param setting"
		 android:dialogTitle="Setting"
		 android:persistent="true"/>
	 	<CheckBoxPreference 
         android:key="sensor_dir"
         android:title="Sensor Direction" 
         android:summary="Change Sensor Direction" />
        
    </PreferenceCategory > -->
</PreferenceScreen>