<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/waitForConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:text="@string/wifi_reconnct" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cantConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

         <TextView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:text="@string/wifi_reconnct_timeout" />
        
        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/wifiDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:text="@string/wifi_disconnect" />

        <Button
            android:id="@+id/ok2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>